기능개선: 네비게이션 상단 라인 추가

--- a/src/main/webapp/css/clientHeader.css
+++ b/src/main/webapp/css/clientHeader.css
@@ -134,6 +134,13 @@ header .cmmn-nav nav li a.active {
 }
 
 header .cmmn-nav nav {
-    margin-top: 42px;
+    margin-top: 22px;
     margin-bottom: 30px;
+}
+
+header .header-line {
+    background: #bbb;
+    height: 1px;
+    width: 100%;
+    margin: 20px 0;
 }
