clientCommon 서브타이틀 간격수정

--- a/src/main/webapp/css/clientCommon.css
+++ b/src/main/webapp/css/clientCommon.css
@@ -23,13 +23,13 @@ section {
     position: relative;
 }
 
-/* ---- ë””ìžì¸ ê³µí†µ ---- */
+/* ---- e””i??i?¸ e³μi†μ ---- */
 
-/* ì„œë¸Œ íƒ€ì´í‹€ */
+/* i?œe¸Œ i?€i?´i?€ */
 .sub-page-title {
     font-size: 43px;
     font-weight: bold;
-    margin-bottom: 71px;
+    margin-bottom: 26px;
     margin-top: 71px;
     text-align: center;
 }
@@ -46,7 +46,7 @@ section {
 
 
 
-/* ì¢Œìš°ë¡œ ë¶™ëŠ” ì´ë¯¸ì§€ */
+/* i￠Œi?°e¡œ e¶™e?” i?´e?¸i§€ */
 .image_box_left {
     position: absolute;
     left: 0;
