--- a/src/main/webapp/css/clientSubNav.css
+++ b/src/main/webapp/css/clientSubNav.css
@@ -6,7 +6,7 @@
     position: relative;
     background-size: cover;
     box-sizing: border-box;
-    padding-top: 178px;
+    padding-top: 111px;
     height: 100%;
 }
 
@@ -122,5 +122,7 @@
 }
 
 .sub-image {
-    height: 538px;
+    height: 404px;
+    background-size: cover;
+    background-position: center;
 }
