--- a/src/main/webapp/css/info/staff.css
+++ b/src/main/webapp/css/info/staff.css
@@ -1,6 +1,6 @@
 .tab {
     width: 100%;
-    margin: 100px 0;
+    margin: 68px 0;
     border: 1px solid #ddd;
 }
 
@@ -9,9 +9,12 @@
     float: left;
     background: #fff;
     color: #373330;
-    padding: 22px 0;
-    font-size: 19px;
+    padding: 18px 0px;
+    font-size: 18px;
     text-align: center;
+    line-height: 16px;
+    letter-spacing: -1px;
+    /* margin-bottom: 2px; */
 }
 
 .tab li.active {
@@ -31,12 +34,13 @@
 
 .tab-contents .max-layout-width {
     text-align: center;
+    letter-spacing: -1.8px;
 }
 
 .small-line {
-    margin-top: 38px;
-    margin-bottom: 55px;
-    width: 116px;
+    margin-top: 32px;
+    margin-bottom: 53px;
+    width: 99px;
     height: 3px;
     display: inline-block;
 }
@@ -67,33 +71,38 @@
 }
 
 .doctor-dec {
-    margin-top: 104px;
-    margin-bottom: 29px;
+    margin-top: 84px;
+    margin-bottom: 18px;
     font-size: 18px;
     color: #a2a2a2;
     text-align: center;
+    letter-spacing: -1px;
 }
 
 .doctor-title {
-    font-size: 33px;
+    font-size: 35px;
     font-width: bold;
     color: #222;
     text-align: center;
-    margin-bottom: 115px;
+    margin-bottom: 79px;
+    font-weight: 600;
+    letter-spacing: -1px;
 }
 
 .text {
     padding-left: 50%;
+    /* letter-spacing: -1.3px; */
 }
 
 .text > div {
-    padding-left: 54px;
+    padding-left: 58px;
 }
 
 .title {
     font-size: 34px;
     color: #222;
     margin-bottom: 16px;
+    letter-spacing: -2.2px;
 }
 
 .title span {
@@ -101,7 +110,7 @@
 }
 
 .text-dec {
-    margin-top: 34px;
+    margin-top: 22px;
 }
 
 .text-bg {
@@ -120,22 +129,25 @@
     background: #7e6956;
     content: '';
     position: absolute;
-    bottom: -36px;
+    bottom: -38px;
     left: 0;
 }
 
 .dec-title {
     margin-bottom: 23px;
     font-size: 20px;
+    letter-spacing: -1px;
 }
 
 .dec {
     line-height: 25px;
     color: #838383;
+    letter-spacing: -1px;
 }
 
 p + .dec-title {
     margin-top: 35px;
+    letter-spacing: -1px;
 }
 
 .image-box {
@@ -206,13 +218,13 @@ p + .dec-title {
 }
 
 .staff-info {
-    margin-top: 97px;
+    margin-top: 69px;
 }
 
 .image_box_left, .image_box_right {
     width: 50%;
     max-width: 1276px;
-    height: 510px;
+    height: 480px;
     top: 0;
 }
 
@@ -233,14 +245,16 @@ p + .dec-title {
     margin-bottom: 50px;
     font-size: 31px;
     font-weight: bold;
+    letter-spacing: -1.5px;
 }
 
 .staff-info-box .text p {
     width: 500px;
-    font-size: 15px;
+    font-size: 16px;
     line-height: 27px;
-    margin-top: 78px;
+    margin-top: 65px;
     word-break: keep-all;
+    letter-spacing: -1px;
 }
 
 .staff-info {
@@ -254,7 +268,7 @@ p + .dec-title {
 
 .text-left.text > div {
     padding-left: 0;
-    padding-right: 54px;
+    padding-right: 58px;
     text-align: right;
 }
 
@@ -267,9 +281,11 @@ p + .dec-title {
 }
 
 .staff-info-box {
-    padding-bottom: 145px;
+    padding-bottom: 86px;
+    padding-top: 8px;
 }
 
 .doctor-contents .section-title {
-    line-height: 1.3;
+    line-height: 1.4;
+    letter-spacing: -1.8px;
 }
