--- a/src/main/webapp/css/clientHeader.css
+++ b/src/main/webapp/css/clientHeader.css
@@ -106,7 +106,7 @@ header .header-banner-slider-continer .bx-wrapper {
     left: 103px;
 }
 
-header .cmmn-nav nav li {
+header .cmmn-nav nav ol li {
     width: 20%;
     float: left;
     font-size: 15px;
@@ -118,7 +118,7 @@ header .cmmn-nav nav li {
     line-height: 16px;
 }
 
-header .cmmn-nav nav li a {
+header .cmmn-nav nav ol li a {
     text-decoration: none;
     color: #222;
     width: 100%;
@@ -126,23 +126,132 @@ header .cmmn-nav nav li a {
     display: inline-block;
 }
 
-header .cmmn-nav nav li:first-child {
+header .cmmn-nav nav ol li:first-child {
     border-left: 1px solid #bbb;
 }
 
-header .cmmn-nav nav li a:hover,
-header .cmmn-nav nav li a.active {
+header .cmmn-nav nav ol li a:hover,
+header .cmmn-nav nav ol li a.active {
     color: #7e6956;
-}
-
-header .cmmn-nav nav {
-    margin-top: 15px;
-    margin-bottom: 15px;
 }
 
 header .header-line {
     background: #bbb;
     height: 1px;
     width: 100%;
-     margin: 16px 0;
+    margin: 16px 0;
+    margin-bottom: 1px;
+}
+
+header .nav-detail {
+    position: relative;
+    z-index: 1;
+}
+
+header .nav-detail .max-layout-width {
+    position: relative;
+}
+
+header nav .nav-detail > li {
+    position: absolute;
+    width: 100%;
+    background: #fff;
+    overflow: hidden;
+    padding-bottom: 10px;
+    border-top: 1px solid #efeae7;
+    height: 309px;
+    display: none;
+}
+
+header nav .nav-detail > li .title,
+header nav .nav-detail > li .sub-category {
+    float: left;
+}
+
+header nav .nav-detail > li .title {
+    padding-top: 57px;
+    width: 400px;
+}
+
+header nav .nav-detail > li .title h2 {
+    font-size: 38px;
+    color: #9b8b7e;
+    font-weight: bold;
+    margin-bottom: 40px;
+}
+
+header nav .nav-detail > li .title p {
+    line-height: 1.5;
+    font-size: 17px;
+    color: #222;
+}
+
+header nav .nav-detail > li .sub-category {
+    padding-top: 50px;
+    height: 100%;
+}
+
+header nav .nav-detail > li .sub-category li a {
+    font-size: 15px;
+    color: #222;
+    margin-bottom: 20px;
+    display: inline-block;
+    position: relative;
+    padding-right: 5px;
+    font-weight: bold;
+}
+
+header nav .nav-detail > li .sub-category li a.active {
+    color: #9c8c7d;
+}
+
+header nav .nav-detail > li .sub-category li a.active:before {
+    position: absolute;
+    bottom: -6px;
+    width: 100%;
+    height: 1px;
+    background: #9c8c7d;
+    content: '';
+}
+
+header nav .nav-detail > li .sub-category li a.active:after {
+    position: absolute;
+    bottom: 5px;
+    width: 5px;
+    height: 5px;
+    background: #9c8c7d;
+    content: '';
+    left: -18px;
+}
+
+header nav .nav-detail > li .sub-category .img {
+    width: 382px;
+    height: 218px;
+    position: absolute;
+    right: 0;
+    top: 50px;
+}
+
+header nav .nav-detail > li .sub-category .img.img01 {
+    background: url(../images/category/category01.jpg)
+}
+
+header nav .nav-detail > li .sub-category .img.img02 {
+    background: url(../images/category/category02.jpg)
+}
+
+header nav .nav-detail > li .sub-category .img.img03 {
+    background: url(../images/category/category03.jpg)
+}
+
+header nav .nav-detail > li .sub-category .img.img04 {
+    background: url(../images/category/category04.jpg)
+}
+
+header nav .nav-detail > li .sub-category .img.img05 {
+    background: url(../images/category/category05.jpg)
+}
+
+header .cmmn-nav ol {
+    padding: 15px 0;
 }
