--- a/src/main/webapp/css/orthodontics/misowonOrthodontics.css
+++ b/src/main/webapp/css/orthodontics/misowonOrthodontics.css
@@ -451,3 +451,48 @@
 .con05 .table-left {
     padding: 49px 0;
 }
+
+.left-fade-slider-container .img01 {
+    background: url(../../images/sub/orthodontics/misowonOrthodontics/orthodontics07.jpg) no-repeat center;
+}
+
+.left-fade-slider-container .img02 {
+    background: url(../../images/sub/orthodontics/misowonOrthodontics/orthodontics08.jpg) no-repeat center;
+}
+
+.left-fade-slider-container .img03 {
+    background: url(../../images/sub/orthodontics/misowonOrthodontics/orthodontics09.jpg) no-repeat center;
+}
+
+.left-fade-slider-container .img04 {
+    background: url(../../images/sub/orthodontics/misowonOrthodontics/orthodontics10.jpg) no-repeat center;
+}
+
+.section07 {
+    margin-top: 100px;
+}
+
+.section07 .img01 {
+    background: url(../../images/sub/orthodontics/misowonOrthodontics/orthodontics11_1.jpg);
+}
+
+.section07 .img02 {
+    background: url(../../images/sub/orthodontics/misowonOrthodontics/orthodontics11_2.jpg);
+}
+
+.section07 .img03 {
+    background: url(../../images/sub/orthodontics/misowonOrthodontics/orthodontics11_3.jpg);
+}
+
+.section07 .img04 {
+    background: url(../../images/sub/orthodontics/misowonOrthodontics/orthodontics11_4.jpg);
+}
+
+.section07 .img05 {
+    background: url(../../images/sub/orthodontics/misowonOrthodontics/orthodontics11_5.jpg);
+}
+
+
+.section08 {
+    margin-top: 140px;
+}
