--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -457,6 +457,7 @@ body {
     font-size: 17px;
     letter-spacing: -1.5px;
     /* font-weight: 600; */
+    line-height: 0.8;
 }
 
 .section06 .bx-wrapper {
@@ -520,6 +521,7 @@ body {
     font-size: 16px;
     color: #222;
     letter-spacing: -1.3px;
+    line-height: 0.8;
 }
 
 .slider-pagenation {
