기능추가: 부분교정 페이지 하단 슬라이드 추가

--- a/src/main/webapp/css/orthodontics/partialOrthodontics.css
+++ b/src/main/webapp/css/orthodontics/partialOrthodontics.css
@@ -369,3 +369,6 @@
     background: url(../../images/sub/orthodontics/partial/partial_icon04.png) no-repeat top center;
 }
 
+.section06 {
+    margin-top: 240px;
+}
