--- a/src/main/webapp/css/clientHeader.css
+++ b/src/main/webapp/css/clientHeader.css
@@ -201,11 +201,11 @@ header nav .nav-detail > li .sub-category li a {
     font-weight: bold;
 }
 
-header nav .nav-detail > li .sub-category li a.active {
+header nav .nav-detail > li .sub-category li a:hover {
     color: #9c8c7d;
 }
 
-header nav .nav-detail > li .sub-category li a.active:before {
+header nav .nav-detail > li .sub-category li a:hover:before {
     position: absolute;
     bottom: -6px;
     width: 100%;
@@ -214,7 +214,7 @@ header nav .nav-detail > li .sub-category li a.active:before {
     content: '';
 }
 
-header nav .nav-detail > li .sub-category li a.active:after {
+header nav .nav-detail > li .sub-category li a:hover:after {
     position: absolute;
     bottom: 5px;
     width: 5px;
@@ -254,4 +254,8 @@ header nav .nav-detail > li .sub-category .img.img05 {
 
 header .cmmn-nav ol {
     padding: 15px 0;
+    width: 1080px;
+    display: block;
+    overflow: hidden;
+    margin: 0 auto;
 }
