--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -457,7 +457,6 @@ body {
     font-size: 17px;
     letter-spacing: -1.5px;
     /* font-weight: 600; */
-    line-height: 0.8;
 }
 
 .section06 .bx-wrapper {
@@ -521,7 +520,6 @@ body {
     font-size: 16px;
     color: #222;
     letter-spacing: -1.3px;
-    line-height: 0.8;
 }
 
 .slider-pagenation {
@@ -892,7 +890,7 @@ body .section07 .bx-pager-link span + span {
 }
 
 .section05 .big-img-slider {
-    width: 50.16%;
+    width: 920px;
 }
 
 .section05 .doctor-slider {
