--- a/src/main/webapp/css/tooth/aesthetic.css
+++ b/src/main/webapp/css/tooth/aesthetic.css
@@ -705,3 +705,51 @@
     border-right: 1px solid #8f8f8f;
     box-sizing: border-box;
 }
+
+.tab-contents1 .left-fade-slider-container .img01 {
+    background: url(../../images/sub/tooth/aesthetic/aesthetic12_1.jpg) no-repeat center;
+}
+
+.tab-contents1 .left-fade-slider-container .img02 {
+    background: url(../../images/sub/tooth/aesthetic/aesthetic12_2.jpg) no-repeat center;
+}
+
+.tab-contents1 .left-fade-slider-container .img03 {
+    background: url(../../images/sub/tooth/aesthetic/aesthetic12_3.jpg) no-repeat center;
+}
+
+.tab-contents1 .left-fade-slider-container .img04 {
+    background: url(../../images/sub/tooth/aesthetic/aesthetic12_4.jpg) no-repeat center;
+}
+
+
+.tab-contents2 .left-fade-slider-container .img01 {
+    background: url(../../images/sub/tooth/aesthetic/aesthetic07_1.jpg) no-repeat center;
+}
+
+.tab-contents2 .left-fade-slider-container .img02 {
+    background: url(../../images/sub/tooth/aesthetic/aesthetic07_2.jpg) no-repeat center;
+}
+
+.tab-contents2 .left-fade-slider-container .img03 {
+    background: url(../../images/sub/tooth/aesthetic/aesthetic07_3.jpg) no-repeat center;
+}
+
+.tab-contents2 .left-fade-slider-container .img04 {
+    background: url(../../images/sub/tooth/aesthetic/aesthetic07_4.jpg) no-repeat center;
+}
+
+.text-slider {
+    background: #f3f3f3;
+    margin-top: 130px;
+    padding-top: 100px;
+    padding-bottom: 150px;
+}
+
+.left-fade-slider-container {
+    margin-top: 130px;
+}
+
+.section09  {
+    margin-top: 100px;
+}
