--- a/src/main/webapp/lib/fade-slider/slider.css
+++ b/src/main/webapp/lib/fade-slider/slider.css
@@ -1,4 +1,4 @@
-
+/* .left-fade-slider-container */
 .post-slider {
     width: 100vw;
     z-index: 1;
@@ -312,4 +312,167 @@
     font-size: 17px;
     white-space: initial;
     padding: 0 10px;
+}
+
+/*fade-in-slider*/
+
+.fade-in-slider .title {
+    text-align: center;
+}
+
+.fade-in-slider .title h2 {
+    font-size: 35px;
+    margin-bottom: 30px;
+    color: #222;
+}
+
+.fade-in-slider .title p {
+    font-size: 17px;
+    color: #222;
+    margin-bottom: 68px;
+}
+
+.fade-in-slider .swiper-slide {
+    position: relative;
+    outline: none;
+}
+
+.fade-in-slider .swiper-slide .text {
+    width: 360px;
+}
+
+.fade-in-slider .swiper-slide .text h2 {
+    line-height: 1.3;
+    margin-bottom: 35px;
+    font-size: 33px;
+}
+
+.fade-in-slider .swiper-slide .text p {
+    width: 320px;
+    word-break: keep-all;
+}
+
+.fade-in-slider .image_box_right {
+    width: 918px;
+    height: 460px;
+    top: 0;
+}
+
+.fade-in-slider .number {
+    font-size: 20px;
+    font-weight: bold;
+    margin-top: 70px;
+    display: block;
+    margin-bottom: 20px;
+}
+
+.fade-in-slider .swiper-container {
+    height: 460px;
+}
+
+.fade-in-slider .max-layout-width {
+    position: relative;
+    padding-bottom: 40px;
+}
+
+.fade-in-slider .scroll-bar {
+    width: 918px;
+    height: 3px;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    background: #ccc;
+}
+
+.fade-in-slider .scroll-bar-drag {
+    width: 131.142px;
+    background: #76695e;
+    height: 3px;
+    transition: left 500ms;
+    cursor: pointer;
+}
+
+/*text-slider*/
+
+.text-slider .slick-slide {
+    overflow: hidden;
+    outline: none;
+    height: auto;
+}
+
+.text-slider .slick-slide > div {
+    float: left;
+}
+
+.text-slider .slick-slide .text {
+    width: 485px;
+    padding-top: 85px;
+    box-sizing: border-box;
+    padding-left: 58px;
+}
+
+.text-slider .slick-slide .text h2 {
+    font-size: 25px;
+    line-height: 1.4;
+    margin-bottom: 55px;
+    color: #222;
+}
+
+.text-slider .slick-slide .text h3 {
+    font-size: 55px;
+    font-weight: bold;
+    color: #e4e4e4;
+    margin-bottom: 25px;
+}
+
+.text-slider .slick-slide .text p {
+    line-height: 1.4;
+    width: 324px;
+    word-break: keep-all;
+}
+
+.text-slider .section-text,
+.text-slider .section-title {
+    text-align: center;
+}
+
+.text-slider .section-title {
+    line-height: 1.3;
+}
+
+.text-slider .section-text {
+    margin-bottom: 70px;
+}
+
+.text-slider .slider-arrow-container {
+    text-align: center;
+    margin-top: -34px;
+    position: relative;
+}
+
+.text-slider .slider-arrow {
+    display: inline-block;
+    width: 201px;
+}
+
+.text-slider .slider-arrow span {
+    display: inline-block;
+    float: left;
+    width: 50%;
+    background: #9b8b7e;
+    height: 68px;
+    line-height: 68px;
+    color: #fff;
+    font-size: 40px;
+    box-sizing: border-box;
+    cursor: pointer;
+}
+
+.text-slider .slider-arrow .slider-prev {
+    padding-left: 20px;
+
+}
+
+.text-slider .slider-arrow .slider-next {
+    padding-right: 20px;
 }
