--- a/src/main/webapp/css/implant/digitalImplants.css
+++ b/src/main/webapp/css/implant/digitalImplants.css
@@ -1,7 +1,7 @@
 .section01 .image_box_left {
     width: 50%;
     max-width: 1276px;
-    height: 552px;
+    height: 500px;
     top: -67px;
 }
 .section01 .img {
@@ -50,8 +50,8 @@
 
 .section06 .imp-img {
     background: url(../../images/sub/implant/digital/digital19.png);
-    width: 470px;
-    height: 205px;
+    width: 441px;
+    height: 191px;
 }
 
 .imp-img {}
@@ -67,7 +67,7 @@
 }
 
 .section01 {
-    margin-top: 164px;
+    margin-top: 133px;
 }
 
 .section01 .text, .section01 .bg .max-layout-width {
@@ -75,7 +75,7 @@
 }
 
 .section01 .text > div, .section01 .bg .max-layout-width > div {
-    padding-left: 86px;
+    padding-left: 73px;
 }
 
 .section01 .bg .max-layout-width > div {
@@ -85,40 +85,45 @@
 
 .section01 .section-title {
     line-height: 1.2;
+    letter-spacing: -2px;
 }
 
 .section01 .bg {
-    margin-top: 50px;
+    margin-top: 42px;
     background: #f5f5f5;
-    padding-top: 50px;
-    padding-bottom: 150px;
+    padding-top: 42px;
+    padding-bottom: 137px;
 }
 
 .section01 .section-text {
     line-height: 1.8;
+    letter-spacing: -1px;
 }
 
 .section01 .section-text:first-child {
-    margin-bottom: 43px;
+    margin-bottom: 30px;
+    letter-spacing: -1px;
 }
 
 .section02 {
-    margin-top: 158px;
+    margin-top: 76px;
     margin-bottom: 66px;
 }
 
 .section02 .section-title {
-    line-height: 1.3
+    line-height: 1.3;
+    letter-spacing: -2.3px;
 }
 
 .section02 .section-text {
     line-height: 1.7;
     width: 600px;
     word-break: keep-all;
+    letter-spacing: -1px;
 }
 
 .section03 {
-    height: 658px;
+    height: 534px;
 }
 
 .section03 .bg {
@@ -146,9 +151,10 @@
 
 .section03 .max-layout-width li p {
     color: #fff;
-    margin-top: 25px;
-    line-height: 2;
+    margin-top: 24px;
+    line-height: 1.5;
     font-size: 20px;
+    letter-spacing: -1.3px;
 }
 
 .section03 .image_box_right {
@@ -167,34 +173,36 @@
 }
 
 .section04 .text > div {
-    padding-left: 83px;
+    padding-left: 69px;
 }
 
 .section04 .con {
     position: relative;
-    padding-top: 205px;
+    padding-top: 113px;
 }
 
 .section04 .image_box_left {
     max-width: 649px;
-    height: 631px;
+    height: 479px;
     width: 100%;
-    top: -98px;
+    top: -79px;
 }
 
 .section04 .section-title {
     line-height: 1.3;
-    margin-bottom: 79px;
+    margin-bottom: 34px;
+    letter-spacing: -3px;
 }
 
 .section04 .section-text {
     line-height: 1.7;
     word-break: keep-all;
     padding-right: 31px;
+    letter-spacing: -1px;
 }
 
 .section04 ul {
-    margin-top: 100px;
+    margin-top: 63px;
     margin-left: -2.69%;
     display: inline-block;
     width: 100%;
@@ -208,18 +216,21 @@
     background: #f5f5f5;
     font-weight: bold;
     position: relative;
-    padding-bottom: 200px;
+    padding-bottom: 193px;
 }
 
 .section04 ul li p {
-    padding-top: 47px;
-    font-size: 18px;
-    margin-bottom: 27px;
+    padding-top: 42px;
+    font-size: 19px;
+    margin-bottom: 21px;
+    letter-spacing: -1px;
 }
 
 .section04 ul li h5 {
-    font-size: 23px;
-    line-height: 1.7
+    font-size: 21px;
+    line-height: 1.4;
+    letter-spacing: -1px;
+    font-weight: 600;
 }
 
 .section04 ul li .bg {
@@ -230,7 +241,7 @@
 }
 
 .section05 {
-    margin-top: 220px;
+    margin-top: 135px;
 }
 
 .section05 .max-layout-width .text {
@@ -244,7 +255,7 @@
 
 .section05 .image_box_left {
     max-width: 1276px;
-    height: 521px;
+    height: 490px;
     width: 50%;
     z-index: 10;
 }
@@ -253,7 +264,8 @@
     padding-top: 100px;
     position: relative;
     line-height: 1.3;
-    margin-bottom: 224px;
+    margin-bottom: 133px;
+    letter-spacing: -2px;
 }
 
 .section05 .max-layout-width .text > div:before {
@@ -270,24 +282,25 @@
     word-break: keep-all;
     line-height: 1.7;
     position: relative;
+    letter-spacing: -1px;
 }
 
 .section05 .section-text:before {
     content: '';
     position: absolute;
     width: 3px;
-    height: 103px;
+    height: 75px;
     background: #7f6a57;
-    top: -170px;
+    top: -100px;
 }
 
 .section05 .bg {
     background: #f5f5f5;
     width: 64.65%;
     position: absolute;
-    height: 305px;
+    height: 288px;
     right: 0px;
-    bottom: -50px;
+    bottom: -89px;
 }
 
 .section05 .max-layout-width {
@@ -296,37 +309,37 @@
 }
 
 .section06 {
-    margin-top: 232px;
+    margin-top: 181px;
 }
 
 .section06 .image_box_right {
     width: 46.78%;
     max-width: 1194px;
-    height: 651px;
+    height: 500px;
     top: 0;
 }
 
 .section06 > .max-layout-width {
-    padding-top: 118px;
+    padding-top: 50px;
 }
 
 .section06 .section-title {
-    line-height: 1.3;
-    letter-spacing: -2px;
+    line-height: 1.35;
+    letter-spacing: -3px;
     margin-bottom: 22px;
     color: #4f4f4f;
 }
 
 .section06 .full-layout-width {
-    margin-top: 67px;
+    margin-top: 40px;
     background: #f5f5f5;
-    height: 442px;
-    padding-top: 65px;
+    height: 339px;
+    padding-top: 48px;
     box-sizing: border-box;
 }
 
 .section07 {
-    height: 382px;
+    height: 317px;
 }
 
 .section07 .max-layout-width {
@@ -337,9 +350,10 @@
 }
 
 .section07 .max-layout-width .text {
-    font-size: 33px;
-    line-height: 1.8;
-    padding-top: 154px;
+    font-size: 30px;
+    line-height: 1.6;
+    padding-top: 119px;
+    letter-spacing: -2px;
 }
 
 .section07 .max-layout-width .text span {
@@ -347,9 +361,9 @@
 }
 
 .section09 {
-    margin-top: 147px;
+    margin-top: 80px;
     text-align: center;
-    margin-bottom: 206px;
+    margin-bottom: 93px;
 }
 
 .section09 .section-title {
@@ -357,7 +371,7 @@
 }
 
 .section09 ul {
-    margin-top: 83px;
+    margin-top: 49px;
     margin-left: -3.07%;
     overflow: hidden;
 }
@@ -378,7 +392,7 @@
 }
 
 .section09 ul li p {
-    height: 113px;
+    height: 77px;
     background: #9b8b7e;
     padding-left: 42px;
     padding-right: 35px;
@@ -387,19 +401,21 @@
 }
 
 .section09 ul li p span:first-child {
-    padding-top: 42px;
+    padding-top: 25px;
     display: block;
-    font-size: 33px;
+    font-size: 23px;
     color: #fff;
     font-weight: bold;
+    letter-spacing: -2px;
 }
 
 .section09 ul li p span.view {
     position: absolute;
     right: 78px;
-    top: 9px;
+    top: 5px;
     font-size: 19px;
     color: #fff;
+    letter-spacing: 1px;
 }
 
 .section09 ul li p span.view:after {
@@ -412,113 +428,38 @@
     bottom: 0;
 }
 
-.section08 {
-    margin-top: 100px;
+.fade-in-slider {
+    margin-top: 90px;
 }
 
-.section08 .title {
-    text-align: center;
-}
-
-.section08 .title h2 {
-    font-size: 35px;
-    margin-bottom: 30px;
-    color: #222;
-}
-
-.section08 .title p {
-    font-size: 17px;
-    color: #222;
-    margin-bottom: 68px;
-}
-
-.section08 .swiper-slide {
-    position: relative;
-}
-
-.section08 .swiper-slide .text {
-    width: 360px;
-}
-
-.section08 .swiper-slide .text h2 {
-    line-height: 1.3;
-    margin-bottom: 35px;
-    font-size: 33px;
-}
-
-.section08 .swiper-slide .text p {
-    width: 320px;
-    word-break: keep-all;
-}
-
-.section08 .image_box_right {
-    width: 918px;
-    height: 460px;
-    top: 0;
-}
-
-.section08 .img01 {
+.fade-in-slider .img01 {
     background: url(../../images/sub/implant/digital/digital12.jpg);
 }
 
-.section08 .img02 {
+.fade-in-slider .img02 {
     background: url(../../images/sub/implant/digital/digital13.jpg);
 }
 
-.section08 .img03 {
+.fade-in-slider .img03 {
     background: url(../../images/sub/implant/digital/digital14.jpg);
 }
 
-.section08 .img04 {
+.fade-in-slider .img04 {
     background: url(../../images/sub/implant/digital/digital15.jpg);
 }
 
-.section08 .img05 {
+.fade-in-slider .img05 {
     background: url(../../images/sub/implant/digital/digital16.jpg);
 }
 
-.section08 .img06 {
+.fade-in-slider .img06 {
     background: url(../../images/sub/implant/digital/digital17.jpg);
 }
 
-.section08 .img07 {
+.fade-in-slider .img07 {
     background: url(../../images/sub/implant/digital/digital18.jpg);
 }
 
-.section08 .number {
-    font-size: 20px;
-    font-weight: bold;
-    margin-top: 70px;
-    display: block;
-    margin-bottom: 50px;
-}
-
-.section08 .swiper-container {
-    height: 460px;
-}
-
-.section08 .max-layout-width {
-    position: relative;
-    padding-bottom: 40px;
-}
-
-.section08 .scroll-bar {
-    width: 918px;
-    height: 3px;
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    background: #ccc;
-}
-
-.section08 .scroll-bar-drag {
-    width: 131.142px;
-    background: #76695e;
-    height: 3px;
-    transition: left 500ms;
-    cursor: pointer;
-}
-
 .section10 {
-    margin-top: 135px;
+    margin-top: 96px;
 }
