--- a/src/main/webapp/css/info/medical.css
+++ b/src/main/webapp/css/info/medical.css
@@ -1,15 +1,17 @@
 .section01 {
-    margin-top: 99px;
+    margin-top: 69px;
 }
 
 .section01 h5 {
     font-size: 24px;
     font-width: bold;
     margin-bottom: 35px;
+    letter-spacing: -2px;
 }
 
 .section01 .section-title {
-    line-height: 1.4;
+    line-height: 1.35;
+    letter-spacing: -2.5px;
 }
 
 .section01 p {
@@ -17,6 +19,7 @@
     color: #4f4f4f;
     margin-bottom: 35px;
     line-height: 1.7;
+    letter-spacing: -1px;
 }
 
 .section01 p strong {
@@ -32,14 +35,14 @@
 }
 
 .section02 {
-    margin-top: 78px;
+    margin-top: 85px;
     background: #f5f5f5;
-    padding-bottom: 56px;
+    padding-bottom: 52px;
 }
 
 .section02 .max-layout-width {
     position: relative;
-    padding-top: 72px;
+    padding-top: 66px;
 }
 
 .section02 .img {
@@ -55,6 +58,7 @@
 .section02 ul li {
     float: left;
     margin-left: 8px;
+    /* letter-spacing: -1px; */
 }
 
 .section02 ul li h2 {
@@ -64,13 +68,15 @@
     color: #222;
     font-size: 25px;
     font-weight: bold;
+    letter-spacing: -1.5px;
 }
 
 .section02 ul li p {
-    font-size: 14px;
+    font-size: 15px;
     padding-left: 13px;
-    margin-bottom: 14px;
+    margin-bottom: 11px;
     position: relative;
+    letter-spacing: -1px;
 }
 
 .section02 ul li p:before {
@@ -92,10 +98,9 @@
 }
 
 .section03 {
-    padding-top: 223px;
-    padding-bottom: 289px;
+    padding-top: 152px;
+    padding-bottom: 260px;
     z-index: 4;
-
 }
 
 .section03 .text {
@@ -106,6 +111,7 @@
 .section03 .section-title {
     padding-left: 79px;
     line-height: 1.4;
+    letter-spacing: -2px;
 }
 
 .section03 .section-text {
@@ -114,6 +120,8 @@
     width: 552px;
     word-break: keep-all;
     position: relative;
+    letter-spacing: -1px;
+    padding-top: 15px;
 }
 
 .section03 .section-text strong {
@@ -123,10 +131,10 @@
 .section03 .section-text:after {
     content: '';
     width: 3px;
-    height: 112px;
+    height: 95px;
     position: absolute;
     left: 74px;
-    bottom: -167px;
+    bottom: -134px;
     background: #7e6956;
 }
 
@@ -151,7 +159,7 @@
     background: #f5f5f5;
     width: 1000px;
     position: absolute;
-    height: 497px;
+    height: 423px;
     right: 0;
     top: 0;
 }
@@ -163,14 +171,16 @@
 .section04 .max-layout-width h2 {
     padding-left: 75px;
     font-size: 40px;
+    letter-spacing: -2px;
+    margin-top: -25px;
 }
 
 .section04 .max-layout-width ul {
-    margin-top: 64px;
+    margin-top: 57px;
     display: inline-block;
     width: 100%;
     padding-left: 75px;
-    padding-bottom: 88px;
+    padding-bottom: 66px;
 }
 
 .section04 .max-layout-width li {
@@ -178,15 +188,16 @@
     width: 50%;
     padding-left: 113px;
     box-sizing: border-box;
-    line-height: 1.7;
+    line-height: 1.5;
     font-size: 17px;
     color: #222;
     padding-right: 10px;
     word-break: keep-all;
+    letter-spacing: -1px;
 }
 
 .icon1, .icon2 {
-    padding-bottom: 55px;
+    padding-bottom: 47px;
 }
 
 .icon1 {
@@ -211,8 +222,8 @@
 }
 
 .section05 {
-    margin-top: 171px;
-    padding-bottom: 244px;
+    margin-top: 98px;
+    padding-bottom: 241px;
 }
 
 .section05 .title {
@@ -237,13 +248,15 @@
 
 .section05 .section-title {
     line-height: 1.3;
+    letter-spacing: -2px;
 }
 
 .section05 .section-text {
-    line-height: 1.9;
-    margin-top: 20px;
+    line-height: 1.7;
+    margin-top: 33px;
     position: relative;
     width: 340px;
+    letter-spacing: -1px;
 }
 
 .section05 .section-text:after {
@@ -253,7 +266,7 @@
     height: 3px;
     background: #7e6956;
     left: 0;
-    bottom: -156px;
+    bottom: -133px;
 }
 
 .section05 .image_box_right {
