--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -446,7 +446,7 @@ body {
 }
 
 .section06 h5 {
-    margin-top: 32px;
+    margin-top: 30px;
     font-size: 27px;
     font-weight: 500;
     margin-bottom: 17px;
@@ -483,9 +483,9 @@ body {
 
 .section07 {
     background: #f5f5f5;
-    padding-top: 91px;
-    margin-top: 72px;
-    padding-bottom: 85px;
+    padding-top: 88px;
+    margin-top: 85px;
+    padding-bottom: 79px;
 }
 
 .section07 h4 {
@@ -509,7 +509,7 @@ body {
 }
 
 .section07 h5 {
-    margin-top: 53px;
+    margin-top: 46px;
     font-size: 34px;
     font-weight: bold;
     margin-bottom: 26px;
@@ -570,7 +570,7 @@ body .section07 .bx-pager-link span + span {
 }
 
 .section08 {
-    padding-top: 78px;
+    padding-top: 72px;
 }
 
 .section08 h4 {
@@ -609,7 +609,7 @@ body .section07 .bx-pager-link span + span {
 }
 
 .consultant li {
-    height: 64px;
+    height: 62px;
     line-height: 65px;
     border-bottom: 1px solid #dfdfdf;
     font-weight: 600;
@@ -637,7 +637,7 @@ body .section07 .bx-pager-link span + span {
 
 .reply {
     font-size: 13px !important;
-    background: #7e6956;
+    background: #9a8b7e;
     color: #fff !important;
     width: 81px;
     height: 31px;
@@ -684,10 +684,10 @@ body .section07 .bx-pager-link span + span {
 }
 
 .section09 {
-    margin-top: 84px;
-    padding-top: 78px;
+    margin-top: 75px;
+    padding-top: 79px;
     background: #f5f5f5;
-    padding-bottom: 98px;
+    padding-bottom: 90px;
 }
 
 .section09 h4 {
@@ -797,26 +797,29 @@ body .section07 .bx-pager-link span + span {
 }
 
 .section05 {
-    margin-top: 140px;
+    margin-top: 99px;
     position: relative;
     height: 567px;
     padding: 20px 0;
 }
 
 .section05 .section-title {
-    line-height: 1.3;
+    line-height: 1.25;
     position: relative;
     z-index: 1;
-    padding-top: 30px;
+    padding-top: 32px;
     margin-bottom: 9px;
+    letter-spacing: -3px;
 }
 
 .section05 .section-text {
-    line-height: 1.7;
+    line-height: 1.6;
     width: 400px;
     word-break: keep-all;
     position: relative;
     z-index: 1;
+    letter-spacing: -1px;
+    padding-top: 8px;
 }
 
 .section05 .section-text:before {
@@ -946,14 +949,17 @@ body .section07 .bx-pager-link span + span {
 
 .section05 .sub-text {
     font-size: 24px;
-    line-height: 1.4;
+    line-height: 1.45;
     color: #fff;
     margin-bottom: 25px;
     margin-top: 30px;
+    letter-spacing: -2px;
 }
 
 .section05 .dc {
     line-height: 1.6;
+    letter-spacing: -1px;
+    font-size: 15px;
 }
 
 .section07 .bx-pager-item {
@@ -968,7 +974,7 @@ body .section07 .bx-pager-link span + span {
 .section05 .bg {
     width: 50%;
     height: 100%;
-    background: #7e6956;
+    background: #9a8b7e;
     position: absolute;
     top: 0;
     right: 0;
